Remove border hover bump

--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -5,7 +5,8 @@
 	margin-bottom: 25px;
 
 	button {
-		border-width: 0px;
+		border: none; 
+		border-bottom: 2px solid #fff;
 		color: $color__text-light;
 		padding: 0 0 10px 0;
 		margin-right: 30px;
