--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -18,6 +18,7 @@
 				opacity: 0;
 				padding: 0;
 				position: absolute;
+				text-align: left;
 				top: 50px;
 				@include transition (all 0.1s ease-in-out);
 				@include transform-origin(center top);
