--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -173,3 +173,80 @@
 		text-transform: uppercase;
 	}
 }
+
+/*--------------------------------------------------------------
+### Portfolio Shortcode
+--------------------------------------------------------------*/
+.jetpack-portfolio-shortcode {
+
+	.portfolio-entry {
+		border-bottom: 2px solid $color__background-hr;
+		margin-bottom: 5em;
+		padding-bottom: 5em;
+
+		&:last-of-type {
+			margin-bottom: 5.5em;
+		}
+	}
+	
+	.portfolio-featured-image {
+		display: block;
+		line-height: 0;
+		margin-bottom: 35px; 
+	}
+
+	.portfolio-entry-title {
+		color: $color__text-dark;
+		@include font-size(2.1333);
+		line-height: normal;
+		margin: 0 0 .5em;
+		text-align: center;
+
+		@media (max-width: 480px) {
+			@include font-size(1.6);
+		}
+
+		a {
+			color: inherit;
+			text-decoration: none;
+
+			&:hover {
+				color: $color__text-medium;
+			}
+		}
+	}
+
+	.portfolio-entry-meta {
+		color: $color__text-light;
+		@include display(flex);
+		font-family: $font__details;
+		@include font-size(0.8);
+		@include justify-content(center);
+		letter-spacing: .1em;
+		line-height: normal;
+		margin-bottom: 35px; 
+		text-align: center;
+		text-transform: uppercase;
+		
+		@media (max-width: 480px) {
+			@include font-size(0.7333);
+		}		
+		
+		a {
+			color: $color__text-light;
+			text-decoration: none;
+
+			&:hover {
+				color: $color__primary-accent;
+			}
+		}
+
+		.project-tags {
+
+			&:before {
+				content: '\00a0\00a0/\00a0\00a0';
+				padding: 0 .4166em;			
+			}
+		}		
+	}	
+}
