Add a bottom margin to the portfolio loop

--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -24,6 +24,10 @@
 	}
 }
 
+.portfolio-loop {
+    margin-bottom: 5.5em;
+}
+
 .portfolio-loop #projects-container,
 .related-projects {
 	margin-right: -1.1667%;
