Change portfolio bottom loop space to padding

--- a/style.css
+++ b/style.css
@@ -2638,7 +2638,7 @@ a {
       color: #2d2d2d; }
 
 .portfolio-loop {
-  margin-bottom: 5.5em; }
+  padding-bottom: 5.5em; }
 
 .portfolio-loop #projects-container,
 .related-projects {
