--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -24,8 +24,8 @@
 	}
 }
 
-.portfolio-loop {
-    padding-bottom: 3.5em;
+.portfolio-loop #projects-container {
+	margin-bottom: 3.5em;
 }
 
 .portfolio-loop #projects-container,
