Fix JP sharing icon display on single project

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -817,7 +817,7 @@
 	font-size: 13px;
 }
 
-.single-post .sharedaddy .sd-content {
+.single .sharedaddy .sd-content {
 	padding: 1em 0 1.5em;
 	text-align: center;
 	width: 100%;
