--- a/style.css
+++ b/style.css
@@ -2355,11 +2355,11 @@ a {
 .share-this {
   font-size: 13px; }
 
-.single-post .sharedaddy .sd-content {
+.single .sharedaddy .sd-content {
   padding: 1em 0 1.5em;
   text-align: center;
   width: 100%; }
-  .single-post .sharedaddy .sd-content ul {
+  .single .sharedaddy .sd-content ul {
     display: inline-block; }
 
 /*--------------------------------------------------------------
