Deal with comment spacing with no comments

--- a/style.css
+++ b/style.css
@@ -2893,6 +2893,8 @@ a {
     width: auto;
     display: block;
     color: #626262; }
+    .comment-list li.comment:last-of-type {
+      margin-bottom: 3.8em; }
     .comment-list li.comment .comment-box {
       padding: 2em 0;
       border-bottom: 1px solid #ebebeb; }
@@ -2956,7 +2958,6 @@ a {
   border-bottom: 1px solid #ebebeb;
   font-size: 14.9328px;
   font-size: 0.9333rem;
-  margin-top: 3.8em;
   padding-bottom: 0.8666em;
   text-transform: uppercase; }
   .comment-reply-title #cancel-comment-reply-link {
