--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -22,6 +22,10 @@
 		width: auto;
 		display: block;
 		color: $color__text-medium;
+		
+		&:last-of-type {
+			margin-bottom: 3.8em;
+		}
 
 		.comment-box {
 			padding: 2em 0;
@@ -111,7 +115,6 @@
 .comment-reply-title {
 	border-bottom: 1px solid $color__background-hr-dark;
 	@include font-size(0.9333);
-	margin-top: 3.8em;
 	padding-bottom: 0.8666em;
 	text-transform: uppercase;
 	
