--- a/style.css
+++ b/style.css
@@ -2632,6 +2632,10 @@ a {
     letter-spacing: 1px;
     padding: 0 0 12px 0;
     margin-right: 34px; }
+    @media (max-width: 768px) {
+      .portfolio-filter-terms button {
+        padding: 0 0 5px 0;
+        margin: 0 10px 5px 0; } }
     .portfolio-filter-terms button:hover {
       color: #2d2d2d; }
     .portfolio-filter-terms button.active {
