--- a/style.css
+++ b/style.css
@@ -2912,6 +2912,8 @@ a {
         display: table; }
     .comment-list li.comment .comment-container {
       margin-left: 6em; }
+      .comment-list li.comment .comment-container .comment-awaiting-moderation {
+        font-style: italic; }
     .comment-list li.comment.pingback .comment-container {
       margin-left: 0; }
     .comment-list li.comment .avatar-container {
