--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ input[type="submit"],
   letter-spacing: 1.5px;
   outline-style: none;
   padding: 1em 1.923em;
-  transition: 0.3s;
+  transition: .3s;
   text-decoration: none;
   text-transform: uppercase; }
   .button:hover, #page #infinite-handle span button:hover,
