--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1501,10 +1501,10 @@ p.demo_store {
     -o-transform: rotate(45deg);
     transform: rotate(45deg); }
   .woocommerce #quick-view-container .product-content-wrapper .flexslider {
+    border: none;
     margin: 0;
     max-height: 500px;
-    overflow-y: hidden;
-    border: none; }
+    overflow-y: hidden; }
     .woocommerce #quick-view-container .product-content-wrapper .flexslider img {
       max-height: 500px; }
   .woocommerce #quick-view-container .product-content-wrapper .product-image-wrapper {
