--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -144,6 +144,10 @@
 						}
 					}
 
+					&.hidden {
+						display: none;
+					}
+
 					.subtract {
 						border-right: none;
 					}
@@ -165,7 +169,7 @@
 
 					a {
 						color: $color__text-dark;
-						
+
 						&:hover {
 							color: $color__text-light;
 						}
@@ -173,7 +177,7 @@
 				}
 
 				.sku {
-					color: $color__text-dark; 
+					color: $color__text-dark;
 					display: inline-block;
 				}
 			}
@@ -421,7 +425,7 @@
 	}
 
 	select:hover + svg {
-		
+
 		path {
 			fill: $color__text-dark;
 		}
