--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -20,6 +20,15 @@
 		position: relative;
 		z-index: 101;
 
+		@include keyframes( stickyMh ) {
+			0%, 100% {
+				opacity: 1;
+			}
+			10% {
+				opacity: 0.7;
+			}
+		}
+
 		@at-root {
 			.sticky-menu:not( .sticky-bar-out ) & {
 				position: relative;
@@ -34,6 +43,7 @@
 				left: 0;
 				width: 100%;
 				@include clearfix;
+				@include animation( stickyMh 0.3s ease-in );
 			}
 
 			.sticky-menu.sticky-bar-out.admin-bar & {
