Adjust layout for updated WC

--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -173,6 +173,7 @@
 				border-radius: 0;
 				font-family: $font__details;
 				font-size: 12px;
+				font-weight: normal;
 				left: 0;
 				right: auto;
 				line-height: normal;
