--- a/sass/woocommerce/_layout.scss
+++ b/sass/woocommerce/_layout.scss
@@ -56,13 +56,7 @@
 
 .woocommerce-page.single-product {
 
-	#container {
-		float: none;
-		margin: 0;
-		width: auto;
-	}
-
-	.container #content {
+	.site-main {
 		float: none;
 		margin: 0;
 		width: auto;
