Minor WC style fixes

--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -33,6 +33,7 @@
 			background-color: $color__primary-accent;
 			border-radius: 0;
 			font-family: $font__details;
+			font-weight: normal;
 			left: 0;
 			line-height: normal;
 			margin: 0;
