--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1463,6 +1463,7 @@ p.demo_store {
     transform: rotate(45deg); }
   .woocommerce #quick-view-container .product-content-wrapper .flexslider {
     border: none;
+    border-radius: 0;
     margin: 0;
     max-height: 500px;
     overflow-y: hidden; }
