--- a/style.css
+++ b/style.css
@@ -1513,6 +1513,7 @@ a {
 ## Page Settings
 --------------------------------------------------------------*/
 .page-layout-no-sidebar .site-main,
+.woocommerce.page-layout-no-sidebar .site-main,
 .page-layout-full-width .site-main {
   margin: 0; }
 
