--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1039,7 +1039,8 @@ p.demo_store {
   padding-left: 0;
   position: relative; }
   .header-design-4 .main-navigation .shopping-cart {
-    bottom: 0; }
+    bottom: 0;
+    padding-left: 45px; }
   .main-navigation .shopping-cart > li {
     padding: 0; }
     .main-navigation .shopping-cart > li:hover .shopping-cart-dropdown, .main-navigation .shopping-cart > li.focus .shopping-cart-dropdown {
