Return WC archive hover button padding values

--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -254,7 +254,7 @@
 					left: 50%;
 					margin: 0;
 					opacity: 0;
-					padding: 12px;
+					padding: 12px 15px;
 					position: absolute;
 					@include transform( translateX( -50% ) );
 					visibility: hidden;
