--- a/woocommerce.css
+++ b/woocommerce.css
@@ -298,7 +298,7 @@ p.demo_store {
       left: 50%;
       margin: 0;
       opacity: 0;
-      padding: 12px;
+      padding: 12px 15px;
       position: absolute;
       -webkit-transform: translateX(-50%);
       -moz-transform: translateX(-50%);
