--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -327,7 +327,7 @@
 		line-height: 1;
 		list-style: none;
 		margin: 0;
-		padding-left: 0;
+		padding-left: 45px;
 		position: relative;
 
 		@at-root .header-design-4 & {
