--- a/style.css
+++ b/style.css
@@ -1645,7 +1645,7 @@ a {
     .header-design-4 #masthead .site-branding {
       display: inline-block;
       float: left;
-      padding: calc(60px /2) 0; }
+      padding: calc(60px / 2) 0; }
       .header-design-4 #masthead .site-branding .site-title {
         font-size: 40px;
         font-size: 2.5rem;
@@ -1655,7 +1655,7 @@ a {
             font-size: 28.8px;
             font-size: 1.8rem; } }
   #masthead #masthead-widgets {
-    margin: 60px auto; }
+    margin: calc(60px / 2) auto; }
     #masthead #masthead-widgets::after {
       clear: both;
       content: "";
