Resolve sidebar bug when no sidebar present

--- a/style.css
+++ b/style.css
@@ -1437,12 +1437,10 @@ a {
       width: auto; } }
   .no-active-sidebar .content-area {
     float: none;
-    margin: 0;
-    width: auto; }
+    margin: 0; }
   .woocommerce.no-active-wc-sidebar .content-area {
     float: none;
-    margin: 0;
-    width: auto; }
+    margin: 0; }
 
 .site-main {
   margin: 0 25.61404% 0 0; }
