--- a/sass/layout/_page-settings.scss
+++ b/sass/layout/_page-settings.scss
@@ -1,5 +1,4 @@
-.page-layout-no-sidebar,
-.woocommerce.page-layout-no-sidebar,
+.page-layout-no-sidebar .container,
 .page-layout-full-width {
 
     .site-main {
