--- a/style.css
+++ b/style.css
@@ -1414,11 +1414,11 @@ a {
   float: left;
   margin: 0 -25.61404% 0 0;
   width: 100%; }
-  .woocommerce-page .content-area {
+  .woocommerce-page .container .content-area {
     float: right;
     margin: 0 0 0 -25.61404%; }
     @media (max-width: 768px) {
-      .woocommerce-page .content-area {
+      .woocommerce-page .container .content-area {
         float: none;
         margin: 0;
         width: auto; } }
@@ -1444,10 +1444,10 @@ a {
 
 .site-main {
   margin: 0 25.61404% 0 0; }
-  .woocommerce-page .site-main {
+  .woocommerce-page .container .site-main {
     margin: 0 0 0 25.61404%; }
     @media (max-width: 768px) {
-      .woocommerce-page .site-main {
+      .woocommerce-page .container .site-main {
         margin: 0; } }
   .woocommerce-page.shop-sidebar-right .site-main {
     margin: 0 25.61404% 0 0; }
