Ensure there is search left spacing for long navs

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -147,6 +147,7 @@
 --------------------------------------------------------------*/
 .social-search {
 	float: right;
+	padding-left: 45px;
 
 	.search-toggle {
 		background: transparent;
