Correct WC price filter price font weight

--- a/sass/woocommerce/_widgets.scss
+++ b/sass/woocommerce/_widgets.scss
@@ -35,7 +35,7 @@
 				text-align: left;
 
 				.price_label {
-					font-weight: light;
+					font-weight: normal;
 
 					span {
 						font-weight: bold;
